test/files/neg/forward.check
forward.scala:6: error: forward reference extends over definition of value x
    def f: int = x;
                 ^
forward.scala:10: error: forward reference extends over definition of value x
    def f: int = g;
                 ^
forward.scala:15: error: forward reference extends over definition of variable x
    def f: int = g;
                 ^
three errors found
